Fix gap between columns

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -203,13 +203,13 @@ td {
   .site {
     display: flex;
     flex-flow: row wrap;
-    margin: 3em 2em 2em;
+    margin: 2em;
     width: auto;
-    /* gap: 2em; */
+    gap: 2em;
   }
 
   .site>* {
-    flex: 1 50%;
+    flex: 1 45%;
   }
 
   .site h2 {
